--- a/TinyMonkey/.classpath
+++ b/TinyMonkey/.classpath
@@ -8,5 +8,8 @@
 			<attribute name="javadoc_location" value="jar:file:/C:/Users/Ravi/Downloads/easymock-3.3.1/easymock-3.3.1/easymock-3.3.1-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Ravi/Downloads/objenesis-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ravi/Downloads/cglib-nodep-2.2.jar"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
