--- a/TinyMonkey/.classpath
+++ b/TinyMonkey/.classpath
@@ -10,6 +10,7 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/Ravi/Downloads/objenesis-1.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ravi/Downloads/cglib-nodep-2.2.jar"/>
+	<classpathentry kind="lib" path="/Users/sandeepsaripalli/Downloads/junit-4.8.2.jar"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
